testsuite/poke.pkl/int-union-type-diag-16.pk
/* { dg-do compile } */

type Foo =
  union uint<32>
  {
    int<16> a : a > 0; /* { dg-error "invalid field size.*\n.*expected 32" } */
    uint<8> b : b < 128;
    uint<4> c : a + b > 255;
    int<32>  d;
  };
